Fixed overflow issue

--- a/client/src/matter/Game.scss
+++ b/client/src/matter/Game.scss
@@ -3,3 +3,7 @@
     left: 100px;
     top: 100;
 }
+
+canvas {
+    display: block;
+}
